@@ -14,7 +14,7 @@
             "rct2.scenery_small.tmc",
             "fidwell.scenery_small.tmc",
             "rct2.scenery_small.tmp",
-            "$DAT:00000002|GWTRMP  ",
+            "fidwell.scenery_small.tmp",
             "rct2.scenery_small.titc",
             "$DAT:00000002|GWTRITC ",
             "rct2.scenery_small.tghc",
