@@ -1,0 +1,46 @@
+{
+    "id": "fidwell.scenery_small.tmp",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "00000002|GWTRMP  |5DF407B0",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 27,
+        "removalPrice": 15,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 116,
+        "isTree": true,
+        "shape": "4/4",
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -31, "y": -118 },
+      { "path": "images/1.png", "x": -31, "y": -110 },
+      { "path": "images/2.png", "x": -31, "y": -118 },
+      { "path": "images/3.png", "x": -31, "y": -110 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Monkey-Puzzle Tree",
+            "fr-FR": "Araucaria",
+            "de-DE": "Chilefichte",
+            "es-ES": "Pino Chileno",
+            "it-IT": "Araucaria",
+            "nl-NL": "Apenboom",
+            "sv-SE": "Brödgran",
+            "ko-KR": "칠레삼나무",
+            "zh-CN": "使猴子困惑的树",
+            "zh-TW": "使猴子困惑的樹",
+            "pt-BR": "Árvore Enigma-do-Macaco",
+            "cs-CZ": "Blahočet chilský",
+            "ja-JP": "モンキーパズルの木",
+            "pl-PL": "Araukaria",
+            "ru-RU": "Обезьянье дерево",
+            "eo-ZZ": "Ĉilia Araŭkarioarbo",
+            "ca-ES": "Araucària de Xile",
+            "fi-FI": "Chilenaraukaria"
+        }
+    }
+}
